[gd_scene load_steps=2 format=3 uid="uid://bqh8x8x8x8x8"]

[ext_resource type="Script" uid="uid://bvolcyggeitvs" path="res://scripts/TitleScreen.gd" id="1"]

[node name="TitleScreen" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 38.0
offset_right = 199.0
offset_bottom = 105.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "HAMMER TIME!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 155.0
offset_right = 329.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -268.0
offset_right = 232.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Presiona cualquier tecla para continuar"
horizontal_alignment = 1
vertical_alignment = 1
